# crescendo-ai

./: GETTING_STARTED.md  README.md  crescendo.py  example_configure_sensor.py  example_read_sensor.py  pyproject.toml  relaytest.py  requirements.txt  run_tests.py  sensortest.py
.junie/: guidelines.md
crescendo_ai/: __init__.py  audio.py  config.py  main.py  relay.py  sensor.py
docs/: tasks.md
music/: music_config.yaml
music/Kamp Rock 00s/: 03 Sex On Fire.m4a
tests/: __init__.py  test_audio_player.py  test_music_config.py  test_sensor.py  test_simulation.py
